--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,60 @@
-# 🔹 Основные настройки
-split = "train"  # "train", "dev", "test"
+# ---------------------------
+# Основные настройки проекта
+# ---------------------------
+split = "train"               # "train", "dev", "test"
+base_dir = "E:\\MELD"         # Корневая директория, где лежат данные
 
-# 🔹 Пути к данным
-base_dir = "E:\\MELD"
+# Пути к данным (используются в config_loader.py)
 csv_path = "{base_dir}\\MELD.Raw\\meld_{split}_labels.csv"
 wav_dir = "{base_dir}\\wavs\\{split}"
 video_dir = "{base_dir}\\MELD.Raw\\{split}_splits"
 
-# 🔹 Датасет
+# ---------------------------
+# Список модальностей и эмоций
+# ---------------------------
 modalities = ["audio"]
 emotion_columns = ["neutral", "happy", "sad", "anger", "surprise", "disgust", "fear"]
 
-# 🔹 DataLoader
+# ---------------------------
+# DataLoader параметры
+# ---------------------------
 [dataloader]
 batch_size = 1
 num_workers = 0
 shuffle = true
 
-# 🔹 Аудио параметры
+# ---------------------------
+# Аудио
+# ---------------------------
 [audio]
-sample_rate = 16000
-wav_length = 2
+sample_rate = 16000           # Целевая частота дискретизации
+wav_length = 10                # Целевая длина (в секундах) для аудио
 
 [audio_saving]
-save_processed_audio = false  # true - сохранять обрезанные файлы, false - не сохранять
-audio_output_dir = "{base_dir}\\output_wavs"   # Папка для сохранения обработанных файлов
+save_processed_audio = false
+audio_output_dir = "{base_dir}\\output_wavs"
 
-# 🔹 Обработка текста
+# ---------------------------
+# Whisper и текст
+# ---------------------------
 [text]
-source = "csv"  # Для dev/test можно использовать "csv", train - всегда whisper
-text_column = "text"  # Колонка с текстом в CSV (если source = "csv")
-whisper_model = "tiny"  # Whisper model: "tiny", "base", "small", "medium", "large"
-max_tokens = 5  # Максимальное количество слов в транскрипции
+# Если "csv", то мы стараемся брать текст из CSV, если там есть
+# (поле text_column). Если нет - тогда Whisper (если нужно).
+source = "csv"
+text_column = "text"
+whisper_model = "tiny"
+max_text_tokens = 25
+
+# Указываем, где запускать Whisper: "cuda" (GPU) или "cpu"
+whisper_device = "cuda"
+
+# Если для dev/test в CSV нет текста, нужно ли всё же вызывать Whisper?
+use_whisper_for_nontrain_if_no_text = true
+
+# ---------------------------
+# Параметры для тренировки
+# ---------------------------
+[train]
+# Если указать random_seed, мы фиксируем seed => воспроизводимые результаты
+random_seed = 42
+subset_size = 5 # Если subset_size = 0 или subset_size не указан, значит используем весь датасет без ограничений.
