--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # ---------------------------
 # Основные настройки проекта
 # ---------------------------
-split = "train"               # "train", "dev", "test"
+# split = "train"               # "train", "dev", "test"
 base_dir = "E:\\MELD"         # Корневая директория, где лежат данные
 
 # Пути к данным (используются в config_loader.py)
